# programs

./: .gitignore  Cargo.toml  README.md
.github/actions/install-solana/: action.yml
.github/workflows/: test.yml
src/: lib.rs  processor.rs  state.rs
src/instructions/: calc.rs  mod.rs
tests/: README.md  bun.lockb  lib.rs  package.json
tests/src/: index.test.ts  types.ts
